LDEV-4440 Migration of sbmt in progress